# Redshift_Desktop

./: .gitignore  README.md  build-html.js  package-lock.json  package.json
reference/: DOPPLER_WEBSOCKET_SYNC_PLAN.md  MOBILE_FEATURE_GAP_ANALYSIS.md  Potential_Future_Features.md  REDSHIFT_MOBILE_PLAN.md  REDSHIFT_SYNC_PLAN.md  TESTFLIGHT_DEPLOYMENT_GUIDE.md  development_plan.txt  list-device-music.py  logs.txt  logs_crash_report.txt  pull-device-music.py  pull-from-device.py  sync_script.py
reference/build_references/certs/: CertificateSigningRequest.certSigningRequest  developerID_application.cer
reference/build_references/cmake/FFmpegBundler/: CMakeLists.txt  prepare_ffmpeg_bundle.sh
reference/build_references/cmake/LibsndfileBundler/: CMakeLists.txt  fix_libsndfile_dylibs.sh  fix_soundfile_module_dylibs.sh  prepare_libsndfile_bundle_dylibs.sh
reference/build_references/cmake/LibsndfileBundler/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
reference/build_references/cmake/LibsndfileBundler/test_install_dir/dependencies/libs_sndfile_bundle/: libFLAC.14.dylib  libmp3lame.0.dylib  libmpg123.0.dylib  libogg.0.dylib  libopus.0.dylib  libsndfile.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib
reference/build_references/cmake/TesseractBundler/: CMakeLists.txt  fix_tesseract_dylibs.sh  sign_adhoc.sh
reference/build_references/cmake/TesseractBundler/test_install/dependencies/libs/: libarchive.13.dylib  libb2.1.dylib  libgif.dylib  libjpeg.8.dylib  libleptonica.6.dylib  liblz4.1.dylib  libopenjp2.7.dylib  libsharpyuv.0.dylib  libtesseract.5.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpmux.3.dylib  libzstd.1.dylib
reference/build_references/dependencies/libs/: libarchive.13.dylib  libavdevice.dylib  libavfilter.10.4.100.dylib  libavformat.dylib  libavutil.dylib  libleptonica.6.dylib  libportaudio.dylib  libportaudiocpp.0.dylib  libpostproc.58.3.100.dylib  libsox.dylib  libswresample.5.3.100.dylib  libswscale.8.3.100.dylib  libtesseract.5.dylib
reference/build_references/python/python/lib/itcl4.2.4/: itclConfig.sh
reference/build_references/python/python/lib/python3.11/: _sysconfigdata__darwin_darwin.py
reference/build_references/python/python/lib/python3.11/config-3.11-darwin/: Makefile  Setup.local
reference/build_references/scripts/: -a  analyze_startup_time.sh  build_app.sh  build_backend.sh  build_frontend.sh  create_dmg.sh  deep_sign_app.sh  launcher_script.sh  main_controller.sh  notarize_app.sh  progressive_startup.md  reset_basil_permissions.sh  start_backend.sh  test_ffmpeg_bundling.sh  test_signing.sh
reference/build_references/scripts/optimized/: README.md  build_app_optimized.sh  build_backend_optimized.sh  optimize_startup.sh  run_backend_fast.sh
scripts/: create-icon.sh  get-device-name.py  get-device-udids.py  list-device-files.py  setup-python.sh
src/main/: main.js  preload.js
src/main/services/: AppSettingsService.js  AudioPlayerService.js  Database.js  DeviceMonitorService.js  DopplerDeviceClient.js  DopplerSyncService.js  FileWatcher.js  MediaKeysService.js  MusicLibraryCache.js  PlaylistService.js  PythonBridge.js  RedShiftUSBSyncService.js  SyncService.js  WebSocketPairingService.js  WindowManager.js
src/main/services/doppler-sync/: DopplerSyncAnalysis.js  DopplerSyncDatabase.js  DopplerSyncDevice.js  DopplerSyncTransfer.js  DopplerSyncWebSocket.js
src/main/services/ipc/: ArtistImageHandlers.js  AudioHandlers.js  DatabaseHelpers.js  DeviceHandlers.js  EventForwarders.js  LibraryHandlers.js  PlaylistHandlers.js  SettingsHandlers.js  SyncHandlers.js  index.js
src/main/services/usb-sync/: ArtistImageSyncManager.js  DeviceConnectionHelper.js  DeviceMusicImporter.js  DeviceScanManager.js  MusicSyncManager.js  PlayCountSyncManager.js  PlaylistSyncManager.js
src/renderer/: index.built.html  index.html  renderer.js
src/renderer/components/: AlbumsView.js  ArtistsView.js  AudioPlayer.js  DeviceManager.js  DopplerSync.js  MusicLibrary.js  PlaylistManager.js  SettingsManager.js  SyncManager.js
src/renderer/components/artists/: ArtistAlbumsRenderer.js  ArtistDataProcessor.js  ArtistDetailRenderer.js  ArtistImageFetcher.js  ArtistListRenderer.js  ArtistViewHelpers.js
src/renderer/components/audioplayer/: AudioPlayerControls.js  AudioPlayerEqualizer.js  AudioPlayerOutputDevice.js  AudioPlayerPlayback.js  AudioPlayerProgress.js  AudioPlayerQueue.js  AudioPlayerUI.js
src/renderer/components/musiclibrary/: MusicLibraryDataManager.js  MusicLibraryEventHandlers.js  MusicLibraryOperations.js  MusicLibraryRenderer.js
src/renderer/components/playlists/: PlaylistAddTracksCoordinator.js  PlaylistAddTracksManager.js  PlaylistAddTracksModalRenderer.js  PlaylistCRUD.js  PlaylistMainRenderer.js  PlaylistOperations.js
src/renderer/components/shared/: PlaylistPickerUtils.js  TrackEventHandlers.js  TrackUIComponents.js
src/renderer/partials/components/: mini-player.html  queue-preview.html
src/renderer/partials/modals/: album-art-modal.html  create-playlist-modal.html  equalizer-modal.html  queue-modal.html  transfer-modal.html
src/renderer/partials/tabs/: dashboard-tab.html  doppler-sync-tab.html  history-tab.html  music-tab.html  settings-tab.html  usb-sync-tab.html
src/renderer/services/: IPCEventManager.js  LoggingService.js  MusicBrainzService.js  SongsMetadataManager.js
src/renderer/styles/: albums-view.css  artists-view.css  base.css  doppler-sync.css  main.css  modals.css  music-library-view.css  player.css  playlists.css  shared-components.css  shared.css  sidebar.css
src/renderer/views/: USBSyncDashboard.js
